# computer-graphics

./: README.md
lab-00/: install.sh  lab-00  lab-00.cpp
lab-01/: install.sh  lab-01  lab-01.cpp
lab-02/: BowlingGame.cpp  CoronaGame  CoronaGame.cpp  CoronaGame.h  fragmentShader_C_M.glsl  fragmentShader_C_M_1.glsl  install.sh  lunar-lander  lunar-lander.cpp  lunar-lander.h  utils.h  vertexShader_C_M.glsl
lab-03/: Comandi__LEGGIMI.txt  install.sh  lab-03  lab-03.cpp  lab-03.h
lab-03/Shaders/: f_toon.glsl  v_toon.glsl  v_wave.glsl
lab-04/: CMakeLists.txt  boundingbox.cpp  camera.cpp  glCanvas.cpp  hit.h  install.sh  lab-04  lab-04.cpp  material.cpp  mesh.cpp  radiosity.cpp  raytracer_students.cpp  raytree.cpp  run.sh  sphere.cpp
lab-06/assets/materials/bamboo_fine_wood_pbr_texture_seamless_eda757f2-25b5-4baa-9bac-583d496d60cf/: bamboo_fine_wood_pbr_texture_seamless_dbbdad65-5486-47a6-9f59-53efd394e5b5.blend
lab-06/assets/materials/bark_dry_pine_f4781b1d-e091-4778-8f69-590ef2879621/: bark_dry_pine_0e0f3299-40b1-4dfb-9045-63335136b726.blend
lab-06/assets/materials/blue_riveted_porcelain_33716e7e-9d0d-45d4-b576-4fd89844b735/: blue_riveted_porcelain_456ab64d-1aed-42c4-9d89-3ad9dd3ddcae.blend
lab-06/assets/materials/cotton_azure_e11499e6-3b1d-4163-ae12-e0bae6d7f320/: cotton_azure_1K_3c95ef1a-ec68-46a1-afd8-a22497d1b634.blend
lab-06/assets/materials/ground_1734d780-a7f3-4453-a5b7-9caa78262f5d/: ground_e8934eeb-8d96-4761-bf8a-6d2ce9a7659b.blend
lab-07/: install.sh  lab-07  lab-07.cpp  lab-07.h
lab-07/Shaders/: f_normal_map.glsl  f_texture_phong.glsl
(+7 files in other folders)
